ShopperPlus_Backend/k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopper-plus-backend
  labels:
    app: shopper-plus-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: shopper-plus-backend
  template:
    metadata:
      labels:
        app: shopper-plus-backend
    spec:
      serviceAccountName: shopper
      securityContext:
          runAsUser: 1000
          fsGroup: 1000
      containers:
      - name: shopper-plus-backend
        securityContext:
          runAsUser: 1000
          # allowPrivilegeEscalation: false
        image: registry.redcloud.land/shopper-plus-backend:v1.0.8
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 30 
          timeoutSeconds: 5
          failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: shopper-plus-backend-service
  labels:
    app: shopper-plus-backend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: shopper-plus-backend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopper-plus-scraper
  labels:
    app: shopper-plus-scraper
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shopper-plus-scraper
  template:
    metadata:
      labels:
        app: shopper-plus-scraper
    spec:
      serviceAccountName: shopper
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      containers:
      - name: shopper-plus-scraper
        securityContext:
          runAsUser: 1000
          # allowPrivilegeEscalation: false
        image: registry.redcloud.land/shopper-plus-backend:v1.0.8
        command: ["node", "src/scrapers/worker.js"]
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
