ShopperPlus_Backend/k8s/memcached.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached
  labels:
    app: memcached
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memcached
  template:
    metadata:
      labels:
        app: memcached
    spec:
      containers:
      - name: memcached
        image: registry.redcloud.land/rhel9/memcached:latest
        ports:
        - containerPort: 11211
        args: ["-m", "128", "-c", "1024"]
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        livenessProbe:
          tcpSocket:
            port: 11211
          initialDelaySeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          tcpSocket:
            port: 11211
          initialDelaySeconds: 5
          timeoutSeconds: 1

---
apiVersion: v1
kind: Service
metadata:
  name: memcached-service
  labels:
    app: memcached
spec:
  ports:
  - port: 11211
    targetPort: 11211
  selector:
    app: memcached
